[package]
name = "samsara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
lazy_static = "1.4.0"
bitflags = "1.3.2"
roaring = "0.10.1"
reunion = { version = "0.1" }
shuttle = { version = "0.4.1", optional = true }
rand = "0.7.3"

[features]
shuttle = ["dep:shuttle"]

[target.'cfg(loom)'.dependencies]
loom = "0.5"
