[package]
name = "samsara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
lazy_static = "1.4.0"
bitflags = "1.3.2"
roaring = "0.10.1"
shuttle = { version = "0.5", optional = true }
rand = "0.8.5"
graphviz-rust = { version = "0.4.0", optional = true }

[features]
shuttle = ["dep:shuttle"]
graphviz = ["dep:graphviz-rust"]
default = ["graphviz"]

[target.'cfg(loom)'.dependencies]
loom = "0.5"
